<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orocos_toolchain</name>
  <version>2.9.0</version>
  <description>
    This metapackage provides Orocos RTT and OCL and dependencies.
  </description>
  <license>GPL v2 + linking exception<license>
  <licence>LGPL-2.1</license>
  <maintainer email="orocos-dev@orocos.org">Orocos Developers</maintainer>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend> <!-- optional -->

  <depend>log4cpp</depend>
  <depend>ocl</depend>
  <depend>rtt</depend>

  <export>
    <metapackage/>
  </export>

</package>
