<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orocos_toolchain</name>
  <version>2.10.0</version>
  <description>
    This metapackage provides Orocos RTT and OCL and dependencies.
  </description>
  <license>GPL v2 + linking exception</license>
  <license>LGPL-2.1</license>
  <maintainer email="orocos-dev@orocos.org">Orocos Developers</maintainer>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend> <!-- optional -->

  <exec_depend>log4cpp</exec_depend>
  <exec_depend>ocl</exec_depend>
  <exec_depend>rtt</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
